--- a/index.html
+++ b/index.html
@@ -1,202 +1,1 @@
-<!doctype html>
-<html>
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-  <title>Расчет эффективности менеджемента компании Hashicorp corp!</title>
-  <link type="text/css" rel="stylesheet" href="assets/css/github-markdown.css">
-  <link type="text/css" rel="stylesheet" href="assets/css/pilcrow.css">
-  <link type="text/css" rel="stylesheet" href="assets/css/hljs-github.min.css" />
-</head>
-
-<body>
-  <article class="markdown-body">
-    <div style="float:left;">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/8/80/HashiCorp_Logo_no_text.png" alt="HashiCorp Logo no text.png"
-        width="140" height="145">
-    </div>
-    <div style="float:left;">
-      <h1 id="расчет-эффективности-менеджемента-компании-hashicorp">
-        <a class="header-link" href="#расчет-эффективности-менеджемента-компании-hashicorp"></a>
-        Расчёт эффективности менеджемента компании Hashicorp &#8482;</h1>
-    </div>
-    <div style="float:left;">
-      <h2 id="краткое-описание">
-        <a class="header-link" href="#краткое-описание"></a>
-        Краткое описание uppend some new text</h2>
-    </div>
-    <table>
-      <tbody>
-        <tr>
-          <td>
-            <strong>Type</strong>
-          </td>
-          <td>Private</td>
-        </tr>
-        <tr>
-          <td>
-            <strong>Founded</strong>
-          </td>
-          <td>2012</td>
-        </tr>
-        <tr>
-          <td>
-            <strong>Founder</strong>
-          </td>
-          <td>Mitchell Hashimoto, Armon Dadgar</td>
-        </tr>
-        <tr>
-          <td>
-            <strong>Headquarters</strong>
-          </td>
-          <td>San Francisco, California, United States</td>
-        </tr>
-        <tr>
-          <td>
-            <strong>Products</strong>
-          </td>
-          <td>Vagrant, Packer, Serf, Consul, Terraform, Vault, Nomad</td>
-        </tr>
-        <tr>
-          <td>
-            <strong>Website</strong>
-          </td>
-          <td>
-            <a href="https://www.hashicorp.com">https://www.hashicorp.com</a>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-    <blockquote>
-      <p>HashiCorp is a company based in San Francisco that solves development, operations, and security challenges in infrastructure
-        so organizations can focus on business-critical tasks.</p>
-    </blockquote>
-    <h2 id="топ-менеджмент">
-      <a class="header-link" href="#топ-менеджмент"></a>Топ менеджмент</h2>
-    <ul class="list">
-      <li>Founder &amp; Co-CTO</li>
-      <li>CEO</li>
-      <li>vice presidents:
-        <ul class="list">
-          <li>people </li>
-          <li>worldwide service </li>
-          <li>support customer success </li>
-          <li>marketing</li>
-          <li>finance</li>
-          <li>enginiring</li>
-          <li>project management </li>
-          <li>alliances</li>
-        </ul>
-      </li>
-      <li>
-        <em>Всего</em>: 11
-      </li>
-    </ul>
-    <h2 id="оценка-эффективности">
-      <a class="header-link" href="#оценка-эффективности"></a>Оценка эффективности</h2>
-    <table>
-      <thead>
-        <tr>
-          <th>Критерий</th>
-          <th>Оценка</th>
-          <th>Комментарий</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Стратегические конкурентные преимущества</td>
-          <td>14</td>
-          <td>[1]</td>
-        </tr>
-        <tr>
-          <td>Доля организации на рынке</td>
-          <td>4</td>
-          <td>[2]</td>
-        </tr>
-        <tr>
-          <td>Технология основного производства</td>
-          <td>10</td>
-          <td>[3]</td>
-        </tr>
-        <tr>
-          <td>Рентабельность производства</td>
-          <td>8</td>
-          <td>[4]</td>
-        </tr>
-        <tr>
-          <td>Инновационность</td>
-          <td>10</td>
-          <td>[5]</td>
-        </tr>
-        <tr>
-          <td>Капитализация</td>
-          <td>9</td>
-          <td>[6]</td>
-        </tr>
-        <tr>
-          <td>Качество</td>
-          <td>10</td>
-          <td>[7]</td>
-        </tr>
-        <tr>
-          <td>Удовлетворенность трудом</td>
-          <td>9</td>
-          <td>[8]</td>
-        </tr>
-        <tr>
-          <td>Итог</td>
-          <td>75</td>
-          <td></td>
-        </tr>
-      </tbody>
-    </table>
-    <h2 id="комментарии">
-      <a class="header-link" href="#комментарии"></a>Комментарии</h2>
-    <ol class="list">
-      <li>Наличие большого количества продуктов, упрощающих работу с большим количеством облачных сервисов.</li>
-      <li>Постоянный рост активного сообщества. Заинтересованность крупных софтверных компаний в продуктах hashicorp.</li>
-      <li>При развитии проектов используются современные agile фреймворки для управления процессами и исключительно устойчивые
-        методики разработки</li>
-      <li>Рентабельность производства так же высока.</li>
-      <li>Продукты компании задают тон развития всему направлению разработки DevOps инструментов.</li>
-      <li>В октябре 2017 года завершился третий раунд инвестиций, по итогам которого капитализация компании достигла 75 млн. $.
-      </li>
-      <li>Качество продуктов компании многократно отмечалось как специалистами так и сообществом разрабтчиков.</li>
-      <li>Работники компании отмечают высокие корпоративные стандарты и идейный коллектив. </li>
-    </ol>
-    <h2 id="справка-по-активности-компании">
-      <a class="header-link" href="#справка-по-активности-компании"></a>Справка по активности компании</h2>
-    <p>В течении последних четырех кварталов, пользоваться коммерческими продуктами компании стали Adobe, Barclays, Citadel,
-      Comcast, Ellucian, Lotto New Zealand, New Relic, SAP Ariba, Segment и Spaceflight. Некомерческие разработки компании
-      имеют большой успех среди специалистов, подбные проекты были скачаны более 22 млн раз.</p>
-    <p>Так же за последние 4 квартала было внесено более 150 улучшений в текущие разработки. Расширена поддержа провайдеров
-      облачных сервисов и на текущий момент поддерживаются все наиболее распространенные провайдеры: Alibaba Cloud, AWS, Google
-      Cloud, Microsoft Azure и Oracle Cloud.
-      <p>HashiCorp начала партнерскую программу, которая создана для более плотной работы с продавцами и системными интеграторами в различных регионах, таких как: North America, EMEA, and Asia Pacific.</p>
-      <p>HashiCorp провела 3 ежегодную конференцию посвещенную применению и использованию продуктов компании в различных областях.
-        Конференцию посетили более 800 учатсников, спикеры представляли такие кампании как Adobe, Barclays, Box, Bridgewater,
-        eBay, Fastly, Google, Joyent, Microsoft, PagerDuty, Under Armour и другие.</p>
-      <p>Более чем в 40 городах по всему миру были созданы инициативные группы людей, которые используют продукты компании в
-        своей работе, численность активного сообщества, которое образовалось вокруг компании, составило более 8000 человек.
-      </p>
-      <p>Компания расширила состав топ менеджента, в который вошли новые лидеры направлений поддержки клиентов, финансов и маркетинга.</p>
-      <h2 id="итог">
-        <a class="header-link" href="#итог"></a>Итог</h2>
-      <p>Итоговая эффективность менеджента по указанным критериям оценивается в
-        <strong>
-          <strong>93 %</strong>
-        </strong>
-      </p>
-      <h2 id="источник">
-        <a class="header-link" href="#источник"></a>Источник</h2>
-      <p>
-        <a href="http://www.marketwired.com/press-release/hashicorp-raises-40-million-to-meet-demand-for-cloud-infrastructure-automation-2238190.htm">[marketwired:24-10-17]</a>
-      </p>
-  </article>
-</body>
-
-</html>
-test
-test
-test2
+more new
